--- a/jetty-jersey-master/src/main/webapp/home.html
+++ b/jetty-jersey-master/src/main/webapp/home.html
@@ -11,7 +11,8 @@
 		<h1>It works !</h1>
 	
 		<button id="button">Call webservice</button>
-		
+		<button id="button2">Call webservice2</button>
+
 		<div id="result"></div>
 		
 	    <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
