--- a/jetty-jersey-master/src/main/webapp/home.html
+++ b/jetty-jersey-master/src/main/webapp/home.html
@@ -10,8 +10,10 @@
 
 		<h1>It works !</h1>
 	
-		<button id="button">Call webservice</button>
-		<button id="button2">Call webservice2</button>
+		<button id="buttonGet">Call webservice</button>
+		<button id="buttonPost">Call webservice2</button>
+		<button id="buttonPut">Call webservice2</button>
+		<button id="buttonDelete">Call webservice2</button>
 
 		<div id="result"></div>
 		
