PUT POST DELETE et GET MARCHE

--- a/jetty-jersey-master/src/main/webapp/home.html
+++ b/jetty-jersey-master/src/main/webapp/home.html
@@ -10,10 +10,10 @@
 
 		<h1>It works !</h1>
 	
-		<button id="buttonGet">Call webservice</button>
-		<button id="buttonPost">Call webservice2</button>
-		<button id="buttonPut">Call webservice2</button>
-		<button id="buttonDelete">Call webservice2</button>
+		<button id="buttonGet">button GET</button>
+		<button id="buttonPut">button PUT</button>
+		<button id="buttonPost">button POST</button>
+		<button id="buttonDelete">button DELETE</button>
 
 		<div id="result"></div>
 		
