--- a/jetty-jersey-master/src/main/webapp/home.html
+++ b/jetty-jersey-master/src/main/webapp/home.html
@@ -10,10 +10,45 @@
 
 		<h1>It works !</h1>
 	
-		<button id="buttonGet">button GET</button>
-		<button id="buttonPut">button PUT</button>
-		<button id="buttonPost">button POST</button>
-		<button id="buttonDelete">button DELETE</button>
+		<!--MapRessourcesStub-->
+		<button id="buttonGetNameMap">button GET</button>
+		<button id="buttonGetAccess">button GET</button>
+		<button id="buttonGetMarker">button GET</button>
+		<button id="buttonGetEvent">button GET</button>
+		<button id="buttonPrintMap">button GET</button>
+
+		<button id="buttonShareMap">button PUT</button>
+		<button id="buttonAddMarker">button PUT</button>
+		<button id="buttonAddEvent">button PUT</button>
+
+		<button id="buttonUnshareMap">button DELETE</button>
+		<button id="buttonDeleteMarker">button DELETE</button>
+		<button id="buttonDeleteEvent">button DELETE</button>
+
+		<!--UserRessourcesStub-->
+		<button id="buttonGetNameUser">button GET</button>
+		<button id="buttonGetPassword">button GET</button>
+		<button id="buttonGetFriends">button GET</button>
+		<button id="buttonGetMaps">button GET</button>
+
+		<button id="buttonAddMaps">button PUT</button>
+		<button id="buttonAddFriends">button PUT</button>
+
+		<button id="buttonModifyMapName">button POST</button>
+
+		<button id="buttonDeleteFriends">button DELETE</button>
+		<button id="buttonDeleteMap">button DELETE</button>
+
+		<!--MarkerRessourcesStub-->
+		<button id="buttonGetNameMarker">button GET</button>
+		<button id="buttonGetMessages">button GET</button>
+		<button id="buttonGetPosition">button GET</button>
+		<button id="buttonGetDuration">button GET</button>
+
+		<button id="buttonAddImage">button PUT</button>
+		<button id="buttonAddMessage">button PUT</button>
+
+		<button id="buttonDeleteMessage">button DELETE</button>
 
 		<div id="result"></div>
 		
