changement nom boutons

--- a/jetty-jersey-master/src/main/webapp/home.html
+++ b/jetty-jersey-master/src/main/webapp/home.html
@@ -11,44 +11,44 @@
 		<h1>It works !</h1>
 	
 		<!--MapRessourcesStub-->
-		<button id="buttonGetNameMap">button GET</button>
-		<button id="buttonGetAccess">button GET</button>
-		<button id="buttonGetMarker">button GET</button>
-		<button id="buttonGetEvent">button GET</button>
-		<button id="buttonPrintMap">button GET</button>
+		<button id="buttonGetNameMap">Get Name (Map)</button>
+		<button id="buttonGetAccess">GET Acess</button>
+		<button id="buttonGetMarker">GET Marker</button>
+		<button id="buttonGetEvent">GET Event</button>
+		<button id="buttonPrintMap">Print Map</button>
 
-		<button id="buttonShareMap">button PUT</button>
-		<button id="buttonAddMarker">button PUT</button>
-		<button id="buttonAddEvent">button PUT</button>
+		<button id="buttonShareMap">Share Map</button>
+		<button id="buttonAddMarker">Add Marker</button>
+		<button id="buttonAddEvent">Add Event</button>
 
-		<button id="buttonUnshareMap">button DELETE</button>
-		<button id="buttonDeleteMarker">button DELETE</button>
-		<button id="buttonDeleteEvent">button DELETE</button>
+		<button id="buttonUnshareMap">Unshare Map</button>
+		<button id="buttonDeleteMarker">Delete Marker</button>
+		<button id="buttonDeleteEvent">Delete Event</button>
 
 		<!--UserRessourcesStub-->
-		<button id="buttonGetNameUser">button GET</button>
-		<button id="buttonGetPassword">button GET</button>
-		<button id="buttonGetFriends">button GET</button>
-		<button id="buttonGetMaps">button GET</button>
+		<button id="buttonGetNameUser">GetNameUser</button>
+		<button id="buttonGetPassword">GetPassword</button>
+		<button id="buttonGetFriends">GetFriends</button>
+		<button id="buttonGetMaps">GetMaps</button>
 
-		<button id="buttonAddMaps">button PUT</button>
-		<button id="buttonAddFriends">button PUT</button>
+		<button id="buttonAddMaps">AddMaps</button>
+		<button id="buttonAddFriends">AddFriends</button>
 
-		<button id="buttonModifyMapName">button POST</button>
+		<button id="buttonModifyMapName">Modify Map Name</button>
 
-		<button id="buttonDeleteFriends">button DELETE</button>
-		<button id="buttonDeleteMap">button DELETE</button>
+		<button id="buttonDeleteFriends">DeleteFriends</button>
+		<button id="buttonDeleteMap">DeleteMap</button>
 
 		<!--MarkerRessourcesStub-->
-		<button id="buttonGetNameMarker">button GET</button>
-		<button id="buttonGetMessages">button GET</button>
-		<button id="buttonGetPosition">button GET</button>
-		<button id="buttonGetDuration">button GET</button>
+		<button id="buttonGetNameMarker">GetNameMarker</button>
+		<button id="buttonGetMessages">GetMessages</button>
+		<button id="buttonGetPosition">GetPosition</button>
+		<button id="buttonGetDuration">GetDuration</button>
 
-		<button id="buttonAddImage">button PUT</button>
-		<button id="buttonAddMessage">button PUT</button>
+		<button id="buttonAddImage">AddImage</button>
+		<button id="buttonAddMessage">AddMessage</button>
 
-		<button id="buttonDeleteMessage">button DELETE</button>
+		<button id="buttonDeleteMessage">DeleteMessage</button>
 
 		<div id="result"></div>
 		
