--- a/jetty-jersey-master/src/main/webapp/html pour mockup/firstpage.html
+++ b/jetty-jersey-master/src/main/webapp/html pour mockup/firstpage.html
@@ -4,7 +4,7 @@
 <style type="text/css">
 
 .btn {
-     width:200px;
+     width:100px;
      text-align:center;
      line-height:100%;
      padding:0.3em;
@@ -37,31 +37,42 @@
 
 
 #lien{
-	font-size: 15px;
+	font-size: 10px;
 	position:absolute;
-	left:700px;
-	top:100px;
+	left:400px;
+	top:30px;
+	
 }
-
+.center-in-center {
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				-webkit-transform: translate(-50%, -50%);
+				-moz-transform: translate(-50%, -50%);
+				-ms-transform: translate(-50%, -50%);
+				-o-transform: translate(-50%, -50%);
+				transform: translate(-50%, -50%);
+			}
 </style>
 </head>
 <body>
+<div class="center-in-center">
 <div>
-	<img src="logo.png" >
+	<img src="logo.png" style="width:60px; height:50px" >
 </div>
 <div>	
-<img src="firstpage.png" >
+<img src="firstpage.png" style="width:500px; height:350px" >
 </div>
 
 <div>	
-<button id="login" class="btn" type="button" style="position:absolute;left:200px;top:60px" onclick="script">Log In</button>
-<button id="signup "class="btn" type="button" style="position:absolute;left:450px;top:60px" onclick="script">Sign Up</button>
+<button id="login" class="btn" type="button" style="position:absolute;left:100px;top:20px" onclick="script">Log In</button>
+<button id="signup "class="btn" type="button" style="position:absolute;left:250px;top:20px" onclick="script">Sign Up</button>
 </div>
 
 
 <div id="lien" >
-	<a href="url">Privacy Policies</a>
+	<a href="url" >Privacy Policies</a>
 </div>
-
+</div>
 </body>
 </html>
