--- a/jetty-jersey-master/src/main/webapp/html pour mockup/placeevent.html
+++ b/jetty-jersey-master/src/main/webapp/html pour mockup/placeevent.html
@@ -6,10 +6,10 @@
 
 .btn {
 	 position:absolute;
-	 top:250px;
-	 left:660px;
-     width:450px;
-	 height:60px;
+	 top:110px;
+	 left:440px;
+     width:350px;
+	 height:40px;
      text-align:center;
      line-height:100%;
      padding:0.3em;
@@ -40,26 +40,26 @@
 }
 #sel1{
 	position:absolute;
-	left:660px;
-	top:80px;
+	left:440px;
+	top:50px;
 	}
 #sel2{
 	position:absolute;
-	left:660px;
-	top:150px;
+	left:440px;
+	top:80px;
 	}
 #sel3{
 	position:absolute;
-	left:1200px;
-	top:150px;
+	left:740px;
+	top:80px;
 	}
 #kuang{
 	position:absolute;
-	top:350px;
-	left:660px;
+	top:160px;
+	left:440px;
 	border:1px solid #000;
-	width: 1000px;
-	height: 450px;
+	width: 500px;
+	height: 350px;
 	overflow:auto;
 	}
 img:hover{
@@ -68,26 +68,36 @@ img:hover{
 img{
 	border-radius:5px;
 	margin-top:10px;
-	width:320px;
-	height:350px;
+	width:250px;
+	height:250px;
 }
 div{
-	 font-size:30px ;
+	 font-size:15px ;
 	 width: 2400px;
 }
+.center-in-center {
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				-webkit-transform: translate(-50%, -50%);
+				-moz-transform: translate(-50%, -50%);
+				-ms-transform: translate(-50%, -50%);
+				-o-transform: translate(-50%, -50%);
+				transform: translate(-50%, -50%);
+			}
 </style>
 </head>
 
 <body>
-<div style="background-color:#F0F8FF; width:1800px;height:900px">
-<b onclick="script" style="font-size:30px">New Place 1[Clic For Rename]</b><br>
+<div style="background-color:#F0F8FF; width:1800px;height:900px" >
+<b onclick="script" style="font-size:20px">New Place 1[Clic For Rename]</b><br>
 
 <div>
 Add your messages here:<br>
 <input type="text" id="message" style=
-"width:600px;height:750px">
+"width:400px;height:450px">
 <br>
-<button  type="button" style="font-size:40px">submit</button>
+<button  type="button" style="font-size:20px">submit</button>
 </div>
 
 <div id="sel1">
@@ -95,7 +105,7 @@ Add your messages here:<br>
 <span>
 Category:
 </span>
-<select id="Category" style="width:800px; height:30px">
+<select id="Category" style="width:400px; height:20px">
 <option value="Category1"  selected="selected">Category1</option>
 <option value="Category2">Category2</option>
 <option value="Category3">Category3</option>
@@ -109,7 +119,7 @@ Category:
 <span>
 From:
 </span>
-<select id="Date" style="width:300px; height:30px">
+<select id="Date" style="width:150px; height:20px">
 <option value="Date1"  selected="selected">01/01/2020</option>
 <option value="Date2">02/01/2020</option>
 <option value="Date3">03/01/2020</option>
@@ -123,7 +133,7 @@ From:
 <span>
 To:
 </span>
-<select id="Date" style="width:300px; height:30px">
+<select id="Date" style="width:150px; height:20px">
 <option value="Date1"  selected="selected">01/01/2020</option>
 <option value="Date2">02/01/2020</option>
 <option value="Date3">03/01/2020</option>
@@ -133,7 +143,7 @@ To:
 </div>
 
 <div>	
-<button class="btn" type="button" style="font-size:30px">Add a new picture</button>
+<button class="btn" type="button" style="font-size:20px">Add a new picture</button>
 </div>
 <div id="kuang">
 			<div>
