--- a/jetty-jersey-master/src/main/webapp/html pour mockup/signup.html
+++ b/jetty-jersey-master/src/main/webapp/html pour mockup/signup.html
@@ -41,11 +41,22 @@
 .btn2:hover {
     background: #268DFF;
 }
+.center-in-center {
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				-webkit-transform: translate(-50%, -50%);
+				-moz-transform: translate(-50%, -50%);
+				-ms-transform: translate(-50%, -50%);
+				-o-transform: translate(-50%, -50%);
+				transform: translate(-50%, -50%);
+			}
+
 
 </style>
 </head>
 <body>
-<div style="background-color:#FAEBD7; width:245px;height: 310px">
+<div class="center-in-center" style="background-color:#FAEBD7; width:245px;height: 330px">
 <button type="button" class="btn1">X</button>
 <div class="container-fluid">
 	<div class="row-fluid">
