database en cours
et ajout d'id pour les classes

--- a/jetty-jersey-master/src/main/webapp/html pour mockup/firstpage.html
+++ b/jetty-jersey-master/src/main/webapp/html pour mockup/firstpage.html
@@ -58,10 +58,10 @@
 <body>
 <div class="center-in-center">
 <div>
-	<img src="logo.png" style="width:60px; height:50px" >
+	<img src="html pour mockup/logo.png" style="width:60px; height:50px" >
 </div>
 <div>	
-<img src="firstpage.png" style="width:500px; height:350px" >
+<img src="html pour mockup/firstpage.png" style="width:500px; height:350px" >
 </div>
 
 <div>	
