--- a/jetty-jersey-master/src/main/webapp/html pour mockup/map.html
+++ b/jetty-jersey-master/src/main/webapp/html pour mockup/map.html
@@ -51,12 +51,12 @@
 <body>
 <div style="background-color:#F0F8FF; width:1200px;height: 800px">
 <div>
-	<img src="logo.png" >
+	<img src="html pour mockup/logo.png" >
 </div>
 
 <div>	
-<button id="login" class="btn" type="button" style="position:absolute;left:250px;top:60px" onclick="script">Log In</button>
-<button id="signup "class="btn" type="button" style="position:absolute;left:500px;top:60px" onclick="script">Sign Up</button>
+<button id="login" class="btn" type="button" style="position:absolute;left:500px;top:60px" onclick="script">Log Out</button>
+<!--button id="signup "class="btn" type="button" style="position:absolute;left:500px;top:60px" onclick="script">Sign Up</button-->
 </div>
 
 <div id="lien" >
@@ -74,15 +74,15 @@
 </div>
 
 <div>
-	<img src="mark1.jfif" onclick="script" style="position:absolute;left:30px;top:230px;width:40px;height:40px">
+	<img src="html pour mockup/mark1.jfif" onclick="script" style="position:absolute;left:30px;top:230px;width:40px;height:40px">
 </div>
 
 <div>
-	<img src="mark2.jpg" onclick="script" style="position:absolute;left:30px;top:280px;width:40px;height:40px">
+	<img src="html pour mockup/mark2.jpg" onclick="script" style="position:absolute;left:30px;top:280px;width:40px;height:40px">
 </div>
 
 <div>
-	<img src="localisation.jpg" onclick="script" style="position:absolute;left:30px;top:330px;width:40px;height:40px">
+	<img src="html pour mockup/localisation.jpg" onclick="script" style="position:absolute;left:30px;top:330px;width:40px;height:40px">
 </div>
 
 <div style="position:absolute;left:130px;top:40px">
