--- a/jetty-jersey-master/src/main/webapp/html pour mockup/placeevent.html
+++ b/jetty-jersey-master/src/main/webapp/html pour mockup/placeevent.html
@@ -147,10 +147,10 @@ To:
 </div>
 <div id="kuang">
 			<div>
-				<img src="pic1.jfif" >
-				<img src="pic2.jfif" >
-				<img src="pic3.jfif" >
-				<img src="pic4.jfif" >
+				<img src="html pour mockup/pic1.jfif" >
+				<img src="html pour mockup/pic2.jfif" >
+				<img src="html pour mockup/pic3.jfif" >
+				<img src="html pour mockup/pic4.jfif" >
 			</div>
 </div>
 </div>
