Correction pb zoom + ajout Map et Friends (à compléter)

--- a/jetty-jersey-master/src/main/webapp/Bootstrap/map.html
+++ b/jetty-jersey-master/src/main/webapp/Bootstrap/map.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e43e32;">
         <a class="navbar-brand">
             <img src="../Bootstrap/img/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
-            <strong class="script_tab_color">Planny</strong>
+            <strong class="script_tab_color" style="font-size: 20px;">Planny</strong>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -33,10 +33,10 @@
               <a class="nav-link" href="../Bootstrap/map.html"><strong class="script_tab_color">Home</strong></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="../Bootstrap/map.html"><strong class="script_tab_color">Maps</strong></a>
+                <a class="nav-link" href="../Bootstrap/mapsMenu.html"><span class="script_tab_color">Maps</span></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="../Bootstrap/map.html"><strong class="script_tab_color">Friends</strong></a>
+                <a class="nav-link" href="../Bootstrap/friends.html"><span class="script_tab_color">Friends</span></a>
             </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
@@ -68,7 +68,7 @@
                     <li>
                         <a href="#">
                             <p style="text-align:center">
-                                <img src="../Bootstrap/img/itinerary.png" width="55" height="55" alt="">
+                                <img src="../Bootstrap/img/itinerary.png" class="img_rotate" width="55" height="55" alt="">
                             <!--i class="fa fa-tachometer-alt"></i>
                             <span>Dashboard</span>
                             <span class="badge badge-pill badge-warning">New</span-->
@@ -78,14 +78,14 @@
                     <li>
                         <a href="#">
                             <p style="text-align:center">
-                                <img src="../Bootstrap/img/marker.png" width="55" height="55" alt="">
+                                <img src="../Bootstrap/img/marker.png" class="img_rotate" width="55" height="55" alt="">
                             </p>
                         </a>
                     </li>
                     <li>
                         <a href="#">
                             <p style="text-align:center">
-                                <img src="../Bootstrap/img/event.png" width="55" height="55" alt="">
+                                <img src="../Bootstrap/img/event.png" class="img_rotate" width="55" height="55" alt="">
                             </p>
                         </a>
                     </li>
@@ -99,7 +99,7 @@
                     <li>
                       <a href="#">
                         <i class="far fa-circle"></i>
-                        <span>Search Map</span>
+                        <span>Create New Map</span>
                       </a>
                     </li>
                     <li class="sidebar-dropdown">
