Cliquer sur images pour utiliser les foncitonnalités
Ajout de l'option pour l'itinéraire et rajout de la fonctionnalité de Yangming pour le marker

--- a/jetty-jersey-master/src/main/webapp/Bootstrap/map.html
+++ b/jetty-jersey-master/src/main/webapp/Bootstrap/map.html
@@ -88,14 +88,14 @@
                     <li>
                         <a href="#">
                             <p style="text-align:center">
-                                <img src="../Bootstrap/img/marker.png" class="img_rotate" width="55" height="55" alt="">
+                                <img id="markID" src="../Bootstrap/img/marker.png" class="img_rotate" width="55" height="55" alt="">
                             </p>
                         </a>
                     </li>
                     <li>
                         <a href="#">
                             <p style="text-align:center">
-                                <img src="../Bootstrap/img/event.png" class="img_rotate" width="55" height="55" alt="">
+                                <img id="event" src="../Bootstrap/img/event.png" class="img_rotate" width="55" height="55" alt="">
                             </p>
                         </a>
                     </li>
