--- a/jetty-jersey-master/src/main/webapp/Bootstrap/home.html
+++ b/jetty-jersey-master/src/main/webapp/Bootstrap/home.html
@@ -42,7 +42,9 @@
 						<input type="checkbox">Remember Me
 					</div>
 					<div class="form-group">
-						<a onclick="verifPassword();" class="btn float-right login_btn">Login!</a>
+						<!--a onclick="verifPassword();" class="btn float-right login_btn">Login!</a-->
+						<a class="btn float-right login_btn" href="javascript:login();">Login!</a>
+
 						<!--<a href="../Bootstrap/map.html" class="btn float-right login_btn">Login!</a>-->
                         <!--input type="submit" value="Login!" class="btn float-right login_btn"-->
 						<!--button type="submit" class="btn float-right login_btn" onClick="window.location.href='../Bootstrap/index.html'">Login!</button-->
@@ -64,8 +66,11 @@
 	    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 		<script type="text/javascript" src="home.js"></script-->
 			<script src="../Bootstrap/script.js"></script>
-			<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+			<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+			<!--script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script-->
 			<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+			
+			
 </body>
 </html>
