--- a/jetty-jersey-master/src/main/webapp/Bootstrap/signup.html
+++ b/jetty-jersey-master/src/main/webapp/Bootstrap/signup.html
@@ -29,7 +29,7 @@
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-user"></i></span>
 						</div>
-						<input type="text" class="form-control" placeholder="Username">
+						<input type="text" class="form-control" placeholder="Username" id="userSign">
 						
                     </div>
                     
@@ -37,24 +37,26 @@
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-user"></i></span>
 						</div>
-						<input type="text" class="form-control" placeholder="Email">
+						<input type="text" class="form-control" placeholder="Email" id="email">
 					</div>
 
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-key"></i></span>
 						</div>
-						<input type="password" class="form-control" placeholder="Password">
+						<input type="password" class="form-control" placeholder="Password" id="passSign">
                     </div>
 
-                    <div class="input-group form-group">
+                    <!--div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-key"></i></span>
 						</div>
 						<input type="password" class="form-control" placeholder="Confirm Password">
-                    </div>
+                    </div-->
 					<div class="form-group">
-						<a href="../Bootstrap/home.html" class="btn float-right login_btn">Sign Up!</a>
+						<!--a href="../Bootstrap/home.html" onclick="signUp();" class="btn float-right login_btn">Sign Up!</a-->
+						<a class="btn float-right login_btn" href="javascript:signUp();">Sign Up!</a>
+
                         <!--input type="submit" value="Sign Up!" class="btn float-right login_btn" href="../Bootstrap/home.html"-->
                         <!--input type="submit" value="Login" class="btn float-right login_btn"-->
                         <!--input type="button" value="Login" onClick="window.location.href='index.html'"-->
@@ -64,7 +66,8 @@
 		</div>
 	</div>
 </div>
-		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+		<script src="../Bootstrap/script.js"></script>
+		<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
