--- a/jetty-jersey-master/src/main/webapp/Bootstrap/home.html
+++ b/jetty-jersey-master/src/main/webapp/Bootstrap/home.html
@@ -43,9 +43,8 @@
 					</div>
 					<div class="form-group">
 						<!--a onclick="verifPassword();" class="btn float-right login_btn">Login!</a-->
-						<a class="btn float-right login_btn" href="javascript:login();">Login!</a>
-
-						<!--<a href="../Bootstrap/map.html" class="btn float-right login_btn">Login!</a>-->
+						<!--a href="javascript:login();" class="btn float-right login_btn">Login!</a-->
+						<a onclick="login();" class="btn float-right login_btn">Login!</a>
                         <!--input type="submit" value="Login!" class="btn float-right login_btn"-->
 						<!--button type="submit" class="btn float-right login_btn" onClick="window.location.href='../Bootstrap/index.html'">Login!</button-->
 					</div>
@@ -66,6 +65,7 @@
 	    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 		<script type="text/javascript" src="home.js"></script-->
 			<script src="../Bootstrap/script.js"></script>
+			<script src="https://smtpjs.com/v3/smtp.js"></script>
 			<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 			<!--script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script-->
 			<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
