--- a/jetty-jersey-master/src/main/webapp/Bootstrap/signup.html
+++ b/jetty-jersey-master/src/main/webapp/Bootstrap/signup.html
@@ -17,6 +17,7 @@
 
 </head>
 <body>
+<form id="signup"">
 <div class="container">
 	<div class="d-flex justify-content-center h-100">
 		<div class="card">
@@ -47,16 +48,15 @@
 						<input type="password" class="form-control" placeholder="Password" id="passSign">
                     </div>
 
-                    <!--div class="input-group form-group">
+                    <div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-key"></i></span>
 						</div>
-						<input type="password" class="form-control" placeholder="Confirm Password">
-                    </div-->
+						<input type="password" class="form-control" placeholder="Confirm Password" id="passSign2">
+                    </div>
 					<div class="form-group">
 						<!--a href="../Bootstrap/home.html" onclick="signUp();" class="btn float-right login_btn">Sign Up!</a-->
-						<a class="btn float-right login_btn" href="javascript:signUp();">Sign Up!</a>
-
+						<a class="btn float-right login_btn" onclick="createAccount();">Sign Up!</a>
                         <!--input type="submit" value="Sign Up!" class="btn float-right login_btn" href="../Bootstrap/home.html"-->
                         <!--input type="submit" value="Login" class="btn float-right login_btn"-->
                         <!--input type="button" value="Login" onClick="window.location.href='index.html'"-->
@@ -67,8 +67,10 @@
 	</div>
 </div>
 		<script src="../Bootstrap/script.js"></script>
+		<script src="https://smtpjs.com/v3/smtp.js"></script>
 		<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+</form>
 </body>
 </html>
