--- a/jetty-jersey-master/src/main/webapp/Bootstrap/map.html
+++ b/jetty-jersey-master/src/main/webapp/Bootstrap/map.html
@@ -162,6 +162,31 @@
               </div>
             </div>
 
+            <div class="modal fade" id="addName" tabindex="-1" role="dialog" aria-labelledby="addNameLabel" aria-hidden="true">
+              <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="addNameLabel">Add name to marker</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    <form>
+                      <div class="form-group">
+                        <label for="recipient-name" class="col-form-label">Name:</label>
+                        <input type="text" class="form-control" id="markername">
+                      </div>
+                    </form>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" onclick="createMarker()"  >Add and Create</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+
             <div class="modal fade" id="newMap" tabindex="-1" role="dialog" aria-labelledby="newMapLabel" aria-hidden="true">
               <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
